--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ pandas==2.2.3
 google-auth==2.40.2
 google-auth-oauthlib==1.2.2
 google-api-python-client==2.17.0
-setuptools>=65.5.0
+setuptools>=65.5.0 
+plotly>=6.1.2
